public class Serie extends Contenu {
    private Integer nombreSaisons;
}