public enum Categorie {
    FILM,
    SERIE,
    DOCUMENTAIRE,
    SPECTACLE,
    EMISSION
}