public class Metadonnees {
    private String genre;
    private Date dateDeSortie;
}