public class ProfessionnelAudiovisuel extends Utilisateur {
    public void accederTableauDeBord() {}
    public void organiserLive(String theme) {}
    public void envoyerContenu(Contenu contenu) {}
}