@startuml diagramme de classe - EPSIFLIX
class Utilisateur {
    -identifiant: UUID
    -motDePasse: String
    - nom: String
    - prenom: String
    - dateNaissance: Date
    - email: String
    + seConnecter(): void
    + seDeconnecter(): void
    + modifierMotDePasse(AncienMotDePasse: String, NouveauMotDePasse: String): void
    + modifierProfil(): void
    + consulterProfil(): void
    + consulterHistorique(): void
    + consulterRecommandations(): void
    + consulterCoupDeCoeur(): void
    + consulterContenus(): void
}

class ClientSansAbonnement {
    +choisirContenu(): void
    +enregistrerContenu(): void
    +voirDetailsContenu(): void
}

' +visionnerEnIllimite(): void

class ClientAvecAbonnement {
    - dateDebut: Date
    - dateFin: Date
    +consulterHistorique(): void
    +consulterRecommandations(): void
    +consulterCoupDeCoeur(): void
    +visionnerContenuEnIllimite(): void
    +posterCommentaire(contenu: String): void
    +accederForum(): void
    +participerLive(theme: String): void
}

' Doit on referencer la relation entre ClientAvecAbonnement et TypeAbonnement explicitement ?
ClientAvecAbonnement --> TypeAbonnement

enum TypeAbonnement {
    BASIQUE
    PREMIUM
    FAMILY
}

class ProfessionnelAudiovisuel {
    +accederTableauDeBord(): void
    +organiserLive(theme: String): void
    +envoyerContenu(contenu: Contenu): void 
}

class Administrateur {
    +gererContenusUtilisateurs(): void
    +modererInteractions(): void
    + suivreInteractions(): void
    +accederTableauDeBordAnalyse(): void
}

class EquipeEPSIFLIX {
    +classerContenus(): void
    +donnerCoupDeCoeur(): void
}


class "ContenuVideo" as Contenu {
    - titre: String
    - description: String
    - dateAjout: Date
    - duree: String 
    - lien: String
    + visionner(): void
    + ajouterCoupDeCoeur(): void
}

class Metadonnees {
    - genre : String
    - dateDeSortie: Date
}

Contenu --o Metadonnees


enum Categorie {
    FILM
    SERIE
    DOCUMENTAIRE
    SPECTACLE
    EMISSION
}

Contenu --o Categorie
Serie --|> Contenu

class Serie {
    -nombreSaisons: Integer
}

class Episode {
    - titre: String
    - numero: Integer
    - duree: String
}

Serie "1" *-- "1..*" Episode

class Catalogue {
    -contenus: Contenu
    +rechercherContenu(): void
    +filtrerContenu(): void
    +trierContenu(): void
    +consulterCatalogue(): void
}

class BandeAnnonce {
    -lien: String
    -duree: String
    -dateDeSortie: Date
}

class Commentaire {
    -contenu: String
    -date: Date
}

class Forum {
    -saison: String
}

class Live {
    -theme: String
}

class Moderation {
    +suiviInteractions: String
    +moderer: void
}

class PreferenceUtilisateur {
    +categoriePreferee: String
}

Catalogue "1" --o "0..*" Contenu
Contenu "1" *-- "0..*" BandeAnnonce
Live "1" *-- "0..*" Commentaire
Forum "1" *-- "0..*" Commentaire
Contenu "1" *-- "0..*" Forum
' Contenu "1" *-- "0..*" Live


Commentaire "1" --* "1" Utilisateur
Commentaire  "1" o-- "1" Moderation
Forum "1" o-- "1" Moderation
Live "1" o-- "1" Moderation

PreferenceUtilisateur "1" -- "1" ClientAvecAbonnement
PreferenceUtilisateur "1" -- "1" ClientSansAbonnement

ClientSansAbonnement --|> Utilisateur
ClientAvecAbonnement --|> Utilisateur
ProfessionnelAudiovisuel --|> Utilisateur
Administrateur --|> Utilisateur
EquipeEPSIFLIX --|> Utilisateur

@enduml
